# libtest

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  main.cpp
base/: CMakeLists.txt
base/include/base/: symbols.h
base/src/: symbols.cpp
links_shared/: CMakeLists.txt
links_shared/include/links_shared/: iface.h
links_shared/src/: impl.cpp
links_static/: CMakeLists.txt
links_static/include/links_static/: iface.h
links_static/src/: impl.cpp
